Навигация Хедер(баннер) Футер view product#inex

--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -1,1 +1,7 @@
-.p = product.title
+.col
+  .card
+    .card-body
+      h5.card-title
+        = product.title
+      p.card-text
+        = product.description
