--- a/app/views/shared/_banner.html.slim
+++ b/app/views/shared/_banner.html.slim
@@ -7,5 +7,5 @@
       img.d-block.w-100
         = image_tag("bnr-2", alt: "")
     .carousel-item
-      img.-block.w-100
+      img.d-block.w-100
         = image_tag("bnr-3", alt: "")
