Первая реализация корзины - Миграции корзины - Модели корзины  - Можно добавлять товар в корзину (с увеличением количества)  - Можно убирать товар из корзины (уменьшение количества)  - Можно удалять товар из корзины - Роуты - Тесты модели - Тесты контроллера

--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -5,3 +5,9 @@
         = product.title
       p.card-text
         = product.description
+      p
+        = link_to 'put', put_in_basket_product_path(product),  data: { turbo_method: :patch }
+      p
+        = link_to 'out', put_out_basket_product_path(product),  data: { turbo_method: :patch }
+      p
+        = link_to 'purge', purge_from_basket_product_path(product),  data: { turbo_method: :patch }
