--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
   <div class=container-fluid>
    <%= render 'shared/top_header' %>
 
+
+
    <div class="position-relative overflow-hidden p-3 p-md-5  text-center ">
      <div class="logo ">
        <%= link_to root_path do %>
@@ -21,6 +23,9 @@
        <%end%>
      </div>
    </div>
+
+
+    <%= render 'shared/flash' %>
 
     <%= yield %>
 
