Добавлены partial views   _basket_product   _nav_basket Переработана views/basket/show Добалена работа с turbo_streams в products_controller Feature тесты для views

--- a/app/views/shared/_top_header.html.slim
+++ b/app/views/shared/_top_header.html.slim
@@ -35,4 +35,5 @@ nav.navbar.navbar-expand-lg.fixed-top.navbar-dark.bg-dark aria-label="Main navig
                 a.dropdown-item href="#"
                   = "Something"
           - else
-            = link_to 'Log in', new_user_session_path,class: "nav-link" ,  data: { turbo_method: :get }
+            = link_to 'Log in', new_user_session_path, class: "nav-link" ,  data: { turbo_method: :get }
+        = render "shared/nav_basket"
