Переработка корзины - Реализован сервис предоставляющий базовые функции для корзины (поиск создание) - Корзина доступна для не зарегистрированных пользователей (работа с сессиями) - Переработка старых тестов - Новые тесты

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
        <%end%>
      </div>
    </div>
+    <div>
+      <%= debug session[:basket_id] %>
+    </div>
 
 
     <%= render 'shared/flash' %>
