--- a/app/views/shared/_nav_basket.html.slim
+++ b/app/views/shared/_nav_basket.html.slim
@@ -1,4 +1,4 @@
-- if user_signed_in?
+- unless @basket.nil?
   li.nav-item.dropdown id="nav_basket"
     .nav-basket
       = link_to nav_basket(@basket), basket_path(@basket), class: "nav-link"
