--- a/app/views/baskets/show.html.slim
+++ b/app/views/baskets/show.html.slim
@@ -1,4 +1,3 @@
 .container
   .basket_products
-    - @basket_products.each  do |basket_product|
-      = render 'baskets/basket_product', basket_product: basket_product
+    = render @basket_products
