--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -6,8 +6,4 @@
       p.card-text
         = product.description
       p
-        = link_to 'put', put_in_basket_product_path(product),  data: { turbo_method: :patch }
-      p
-        = link_to 'out', put_out_basket_product_path(product),  data: { turbo_method: :patch }
-      p
-        = link_to 'purge', purge_from_basket_product_path(product),  data: { turbo_method: :patch }
+        = render 'basket_products/form', product: product, basket_product: @basket_product
