--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,9 @@
      </div>
    </div>
 
-    <%= render 'shared/flash' %>
+    <div id="flash-messages">
+      <%= render 'shared/flash' %>
+    </div>
 
     <%= yield %>
 
