--- a/app/views/basket_products/add.turbo_stream.slim
+++ b/app/views/basket_products/add.turbo_stream.slim
@@ -1,2 +1,2 @@
-/ = turbo_stream.update('nav_basket', partial: 'shared/nav_basket')
+= turbo_stream.update('nav_basket', partial: 'shared/nav_basket')
 = turbo_stream.update(@basket_product, partial: 'basket_products/basket_product', locals: { basket_product: @basket_product })
