Отображение ошибок OrderDetail Политика для создания заказа create vew для Order

--- a/app/views/basket_products/destroy.turbo_stream.slim
+++ b/app/views/basket_products/destroy.turbo_stream.slim
@@ -1,2 +1,4 @@
 = turbo_stream.update('nav_basket', partial: 'shared/nav_basket')
 = turbo_stream.remove(@basket_product)
+-unless policy(@basket).create_order?
+  = turbo_stream.remove('order')
