--- a/app/views/baskets/show.html.slim
+++ b/app/views/baskets/show.html.slim
@@ -1,8 +1,9 @@
 .container
   .row
     .col-md-6
-      .order
-        = render 'orders/form', order: @order
+      .order id="order"
+        -if policy(@basket).create_order?
+          = render 'orders/form', order: @order
     .col-md-6
       .basket_products
         = render @basket_products
