--- a/app/views/orders/_form.html.slim
+++ b/app/views/orders/_form.html.slim
@@ -1,40 +1,37 @@
 .container
   = form_with model: order, local: false do |order_form|
+    .row
+      h4.label
+        = "Заказ"
     = order_form.fields_for :detail, order.detail do |detail_form|
-      .row
+      .row.my-3
         .col-md-6
-          = detail_form.label :Имя
-          p
-          = detail_form.text_field :first_name, class: "form-control"
+          = detail_form.label :Имя, class: "label", for: "order-name"
+          = detail_form.text_field :first_name, id: "order-name", class: "form-control form-control-sm"
           = render 'orders/detail_message', detail: order.detail, field: 'first_name'
         .col-md-6
-          = detail_form.label :Фамилия
-          p
-          = detail_form.text_field :last_name, class: "form-control"
+          = detail_form.label :Фамилия, class: "label", for: "order-surname"
+          = detail_form.text_field :last_name,id: "order-surname", class: "form-control form-control-sm"
           = render 'orders/detail_message', detail: order.detail, field: 'last_name'
-      p
-      .row
+
+      .row.my-3
         .col-md-6
-          = detail_form.label :Город
-          p
-          = detail_form.text_field :city, class: "form-control"
+          = detail_form.label :Город, class: "label", for: "order-city"
+          = detail_form.text_field :city, id:"order-city", class: "form-control form-control-sm"
           = render 'orders/detail_message', detail: order.detail, field: 'city'
         .col-md-6
-          = detail_form.label :Телефон
-          p
-          = detail_form.text_field :phone, class: "form-control"
+          = detail_form.label :Телефон, class: "label", for: "order-phone"
+          = detail_form.text_field :phone, id: "order-phone", class: "form-control form-control-sm"
           = render 'orders/detail_message', detail: order.detail, field: 'phone'
-      p
-      .row
+
+      .row.my-3
         .col-md-9
-          = detail_form.label :Улица
-          p
-          = detail_form.text_field :street, class: "form-control"
+          = detail_form.label :Улица, class: "label", for: "order-street"
+          = detail_form.text_field :street, id: "order-street", class: "form-control form-control-sm"
           = render 'orders/detail_message', detail: order.detail, field: 'street'
         .col-md-3
-          = detail_form.label :Дом
-          p
-          = detail_form.text_field :house, class: "form-control"
+          = detail_form.label :Дом, class: "label", for: "order-house"
+          = detail_form.text_field :house, id: "order-house", class: "form-control form-control-sm"
           = render 'orders/detail_message', detail: order.detail, field: 'street'
 
-    = order_form.submit 'Оформить', name: 'create', class: "btn btn-outline-dark"
+    = order_form.submit 'Оформить', name: 'create', class: "btn btn-outline-light my-4"
