--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,26 +11,20 @@
   </head>
 
   <body>
-  <div class=container-fluid>
-   <%= render 'shared/top_header' %>
 
+  <%= render 'shared/top_header' %>
 
-
-   <div class="position-relative overflow-hidden p-3 p-md-5  text-center ">
-     <div class="logo ">
+   <div class="container text-center">
+     <div class="logo">
        <%= link_to root_path do %>
          <h1>Workshop</h1>
        <%end%>
      </div>
    </div>
 
-    <div id="flash-messages">
-      <%= render 'shared/flash' %>
-    </div>
-
     <%= yield %>
 
   <%= render 'shared/foot_header' %>
-  </div>
+
   </body>
 </html>
