--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -1,7 +1,6 @@
-.col-12.text-center
+.container-lg.text-center
   = render 'shared/banner'
-p
-  .col-10.offset-1.text-center
-    .row
-      .row.row-cols-1.row-cols-md-4.g-4
-        = render @products
+
+.container-lg.my-5
+  .row.justify-content-around
+    = render @products
