--- a/app/views/shared/_banner.html.slim
+++ b/app/views/shared/_banner.html.slim
@@ -1,11 +1,11 @@
-.carousel.slide.carousel-fade id="carouselExampleSlidesOnly" data-bs-ride="carousel"
-  .carousel-inner
-    .carousel-item.active
-      img.d-block.w-100
-        = image_tag("bnr-1", alt: "")
-    .carousel-item
-      img.d-block.w-100
-        = image_tag("bnr-2", alt: "")
-    .carousel-item
-      img.d-block.w-100
-        = image_tag("bnr-3", alt: "")
+/ .carousel.slide.carousel-fade.w-auto id="carouselExampleSlidesOnly" data-bs-ride="carousel"
+/   .carousel-inner
+/     .carousel-item.active
+/       img.d-block.w-100
+/         = image_tag("bnr-1", alt: "")
+/     .carousel-item
+/       img.d-block.w-100
+/         = image_tag("bnr-2", alt: "")
+/     .carousel-item
+/       img.d-block.w-100
+/         = image_tag("bnr-3", alt: "")
